--- a/frontend/src/components/Home/Author/Author.scss
+++ b/frontend/src/components/Home/Author/Author.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/breakpoints';
 
 .author {
-    height: 100vh;
+    margin: 50px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -47,6 +47,14 @@
     &__mobile {
         display: none;
     }
+
+    &__paragraph {
+        margin: 6px 0;
+
+        &:first-child {
+            margin-top: 0px;
+        }
+    } 
 }
 
 @media (max-width: $xl) {
