--- a/frontend/src/styles/page/postpage.scss
+++ b/frontend/src/styles/page/postpage.scss
@@ -23,6 +23,7 @@
         font-size: 18px;
         line-height: 150%;
         color: #EFEFEF;
+        white-space: pre-wrap
     }
 
     &__estimation {
